modified:   main.ui 	modified:   mainwindow.cpp 	modified:   mainwindow.h 	modified:   readme.md

--- a/cppcheck/gui/main.ui
+++ b/cppcheck/gui/main.ui
@@ -62,7 +62,7 @@
      <x>0</x>
      <y>0</y>
      <width>640</width>
-     <height>19</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="mMenuFile">
@@ -75,6 +75,9 @@
     <addaction name="mActionOpenProjectFile"/>
     <addaction name="mActionEditProjectFile"/>
     <addaction name="mActionCloseProjectFile"/>
+    <addaction name="separator"/>
+    <addaction name="mActionImportSetting"/>
+    <addaction name="mActionExportSetting"/>
     <addaction name="separator"/>
     <addaction name="mActionProjectMRU"/>
     <addaction name="mActionSave"/>
@@ -133,14 +136,14 @@
     </property>
     <widget class="QMenu" name="menuCpp_standard">
      <property name="title">
-      <string>C++ standard</string>
+      <string>C++ sta&amp;ndard</string>
      </property>
      <addaction name="mActionCpp03"/>
      <addaction name="mActionCpp11"/>
     </widget>
     <widget class="QMenu" name="menuC_standard">
      <property name="title">
-      <string>C standard</string>
+      <string>&amp;C standard</string>
      </property>
      <addaction name="mActionC89"/>
      <addaction name="mActionC99"/>
@@ -343,7 +346,7 @@
      <normaloff>:/images/applications-development.png</normaloff>:/images/applications-development.png</iconset>
    </property>
    <property name="text">
-    <string>Style warnings</string>
+    <string>Style war&amp;nings</string>
    </property>
    <property name="iconText">
     <string>Show style warnings</string>
@@ -361,7 +364,7 @@
      <normaloff>:/images/showerrors.png</normaloff>:/images/showerrors.png</iconset>
    </property>
    <property name="text">
-    <string>Errors</string>
+    <string>E&amp;rrors</string>
    </property>
    <property name="iconText">
     <string>Show errors</string>
@@ -448,7 +451,7 @@
      <normaloff>:/images/scratchpad.png</normaloff>:/images/scratchpad.png</iconset>
    </property>
    <property name="text">
-    <string>Show S&amp;cratchpad...</string>
+    <string>Sh&amp;ow Scratchpad...</string>
    </property>
   </action>
   <action name="mActionNewProjectFile">
@@ -498,7 +501,7 @@
      <normaloff>:/images/showwarnings.png</normaloff>:/images/showwarnings.png</iconset>
    </property>
    <property name="text">
-    <string>Warnings</string>
+    <string>&amp;Warnings</string>
    </property>
    <property name="iconText">
     <string>Show warnings</string>
@@ -516,7 +519,7 @@
      <normaloff>:/images/showperformance.png</normaloff>:/images/showperformance.png</iconset>
    </property>
    <property name="text">
-    <string>Performance warnings</string>
+    <string>Per&amp;formance warnings</string>
    </property>
    <property name="iconText">
     <string>Show performance warnings</string>
@@ -542,7 +545,7 @@
      <normaloff>:/images/dialog-information.png</normaloff>:/images/dialog-information.png</iconset>
    </property>
    <property name="text">
-    <string>Information</string>
+    <string>&amp;Information</string>
    </property>
    <property name="toolTip">
     <string>Show information messages</string>
@@ -557,7 +560,7 @@
      <normaloff>:/images/applications-system.png</normaloff>:/images/applications-system.png</iconset>
    </property>
    <property name="text">
-    <string>Portability</string>
+    <string>&amp;Portability</string>
    </property>
    <property name="toolTip">
     <string>Show portability warnings</string>
@@ -576,7 +579,7 @@
   </action>
   <action name="mActionProjectMRU">
    <property name="text">
-    <string notr="true">Project MRU placeholder</string>
+    <string notr="true">Project &amp;MRU placeholder</string>
    </property>
    <property name="visible">
     <bool>true</bool>
@@ -627,7 +630,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Platforms</string>
+    <string>P&amp;latforms</string>
    </property>
    <property name="visible">
     <bool>false</bool>
@@ -641,7 +644,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>C++11</string>
+    <string>C++&amp;11</string>
    </property>
   </action>
   <action name="mActionC99">
@@ -652,7 +655,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>C99</string>
+    <string>C&amp;99</string>
    </property>
   </action>
   <action name="mActionPosix">
@@ -660,7 +663,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Posix</string>
+    <string>&amp;Posix</string>
    </property>
   </action>
   <action name="mActionC11">
@@ -668,7 +671,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>C11</string>
+    <string>C&amp;11</string>
    </property>
   </action>
   <action name="mActionC89">
@@ -676,7 +679,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>C89</string>
+    <string>&amp;C89</string>
    </property>
   </action>
   <action name="mActionCpp03">
@@ -684,7 +687,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>C++03</string>
+    <string>&amp;C++03</string>
    </property>
   </action>
   <action name="mActionPrint">
@@ -705,13 +708,23 @@
   </action>
   <action name="mActionLibraryEditor">
    <property name="text">
-    <string>Library Editor...</string>
+    <string>Li&amp;brary Editor...</string>
    </property>
    <property name="toolTip">
     <string>Open library editor</string>
    </property>
    <property name="visible">
     <bool>false</bool>
+   </property>
+  </action>
+  <action name="mActionImportSetting">
+   <property name="text">
+    <string>&amp;Import Setting</string>
+   </property>
+  </action>
+  <action name="mActionExportSetting">
+   <property name="text">
+    <string>E&amp;xport Setting</string>
    </property>
   </action>
  </widget>
